--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=homeypark
 server.port=8080
 #server.servlet.context-path=/api/v1
 spring.config.import=optional:file:.env.development
-spring.profiles.active=postgres
+spring.profiles.active=mysql
 
 imgbb.api.url=https://api.imgbb.com/1/upload
 imgbb.api.key=fc444caf23ad14d701585d721cebb072
