feat: update config

--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -1,7 +1,7 @@
 # Database
-spring.datasource.url=jdbc:mysql://localhost:3306/homeypark?useSSL=false&serverTimezone=UTC&createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.url=jdbc:mysql://homeypark-marcelogarro137-e3e8.d.aivencloud.com:20402/defaultdb?sslMode=REQUIRED&serverTimezone=UTC&createDatabaseIfNotExist=true
+spring.datasource.username=avnadmin
+spring.datasource.password=AVNS_cih8sGBfywZ2_1TJ-Gd
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
